--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
 streamlit
-spacy==3.7.2
+spacy
 streamlit-lottie
 en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl
